until api get speed

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,12 +9,43 @@ Home View
 {% endblock link %}
 
 {% block content %}
-  <form action="/deadacount/" method="post">
-    {% csrf_token %}
-    <div>
-      <p class="get_your_follower">@以降のあなたのTwitterIDを入力してください。</p>
-      <textarea id="username" name="username" placeholder="twitter_id"></textarea>
+<form id="contact" action="/deadacount/" method="POST">
+  {% csrf_token %}
+  <div class="container">
+
+    <div class="head">
+      <h2></h2>
     </div>
-    <input type="submit" value="送信">
-  </form>
+
+    <p class="get_your_follower">@以降のあなたのTwitterIDを入力してください。</p>
+    <input type="text" name="username" placeholder="twitter_id" /><br />
+
+    <button id="submit" type="submit">
+      チェック
+    </button>
+
+  </div>
+</form>
+
+<!--
+<form id="contact" action="/friends/" method="POST">
+  {% csrf_token %}
+  <div class="container">
+
+    <div class="head">
+      <h2></h2>
+    </div>
+
+    <p class="get_your_follower">@以降のあなたのTwitterIDを入力してください。</p>
+    <input type="text" name="username" placeholder="twitter_id" /><br />
+
+    <button id="submit" type="submit">
+      チェック
+    </button>
+
+  </div>
+
+
+</form>
+-->
 {% endblock content %}
