--- a/static/home.css
+++ b/static/home.css
@@ -1,19 +1,53 @@
-#tweet {
-  margin-bottom: 15px;
-  width: 300px;
-  height: 150px;
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 6px;
+  background-color:aliceblue;
 }
 
-#username {
-  margin-bottom: 15px;
-  width: 200px;
-  height: 20px;
+.head {
+  border-radius: 6px 6px 0 0;
+  background-color: steelblue;
+  color: #FAFAFA;
+}
+
+h2 {
+  padding: 6px 0 6px 0;
+  font-size: 1.4em;
 }
 
 input {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  padding: 10px 10px 10px;
+  font-family: 'Source Sans Pro',arial,sans-serif;
+  border: 1px solid #cecece;
+  background: #d7d7d7;
+  
+  border-radius: 6px;
+  background-clip: border-box;
 }
 
 .get_your_follower {
   color:steelblue;
+}
+
+button {
+  margin-bottom:15px;
+  background-color:#2ABCA7;
+  padding: 10px 35px;
+  border-radius: 5px;
+  border: 1px solid #2ABCA7;
+  transition: .5s;
+  cursor: pointer;
+  color: #fff;
+  font-size: 1.0m;
+}
+
+button:hover, .button:hover {
+  background:#19a08c;
+}
+
+::-webkit-input-placeholder {
+  
 }
