modified page speed but max100 frienduser get

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,24 @@ Home View
   </div>
 </form>
 
+<form id="contact" action="{% url 'deadacount2' %}" method="GET">
+ 
+  <div class="container">
+
+    <div class="head">
+      <h2></h2>
+    </div>
+
+    <p class="get_your_follower">@以降のあなたのTwitterIDを入力してください。</p>
+    <input type="text" name="screen_name" placeholder="twitter_id" /><br />
+
+    <button id="submit" type="submit">
+      チェック
+    </button>
+
+  </div>
+</form>
+
 <!--
 <form id="contact" action="/friends/" method="POST">
   {% csrf_token %}
