--- a/static/deadacount.css
+++ b/static/deadacount.css
@@ -7,7 +7,6 @@
 }
 
 .wrapper {
-  width: 960px;
   margin: 0 auto;
 }
 
@@ -17,8 +16,8 @@
 
 h2 {
   border-top: darkblue solid;
-  margin: 10px 95px 5px 95px;
-  padding: 7px 0;
+  margin: 10px 90px 5px 90px;
+  padding: 7px 0
 }
 
 .child1 {
