--- a/static/deadacount.css
+++ b/static/deadacount.css
@@ -49,6 +49,16 @@ h2 {
   box-shadow: 1.4px 1.4px slategrey;
 }
 
+#twitter_new_info_box{
+  border: steelblue 1px solid;
+  width: 270px;
+  margin: 0 auto;
+  margin-bottom: 6px;
+  padding: 8px 7px 8px 7px;
+  overflow:hidden;
+  box-shadow: 1.4px 1.4px slategrey;
+}
+
 #username{
   margin: 0;
 }
@@ -69,4 +79,28 @@ h2 {
 
 a {
   text-decoration: none;
+}
+
+
+
+.btn {
+  margin-top: 4px;
+  display: inline-block;
+  height: 38px;
+  padding: 0 15px;
+  color: #555;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-sizing: border-box;
+  box-shadow: 1.4px 1.4px slategrey;
 }
