--- a/templates/base.html
+++ b/templates/base.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title%}{% endblock title%}</title>
+  <title>フォロー整理ったー</title>
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'base.css' %}">
   {% block link %}
   {% endblock link %}
+  {% block script %}
+  {% endblock script %}
 </head>
 <body>
   <div class="wrapper">
