--- a/templates/deadacount2.html
+++ b/templates/deadacount2.html
@@ -3,7 +3,12 @@
 
 {% block link %}
 <link rel="stylesheet" href="{% static 'deadacount.css' %}">
+<script src="{% static 'deadacount.js' %}"></script>
 {% endblock link %}
+
+{% block script %}
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+{% endblock script %}
 
 {% block content %}
   <div class="parent">
@@ -20,7 +25,10 @@
       </div>
       {% endif %}
       {% endfor %}
+      <div id="new_post"></div>
+      <button class="btn btn-primary" id="load-btn">もっと見る</button>
     </div>
+
     <div class="child2">
       <h2>息してる</h2>
       {% for aliveacount in aliveacount_list %}
